# essential_cpp

./: .gitmodules  Makefile  README.md  RELEASE.md  build.sh  essential_appendix.md
example/: build.sh
example/core_lang_spec/: Makefile  aliging_ut.cpp  argument.cpp  attr_ut.cpp  class_layout_ut.cpp  comparison_operator_old_ut.cpp  concept_ut.cpp  (+49 more)
example/module_cmake/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  math.cppm  type_traits.cppm
h/: measure_performance.h  nstd_concepts.h  nstd_type2str.h  scoped_guard.h  spin_lock.h  suppress_warning.h  suppress_warning_clang.h  suppress_warning_gcc.h
make/: build_foreach.sh  env.mk  example.mk  gtest.mk  md.mk
md/: core_lang_spec.md  cpp_idioms.md  design_pattern.md  essential_appendix.md  essential_intro.md  intro_notation.md  solid.md  stdlib_and_concepts.md
o/: .gitignore  core_lang_spec.md  cpp_idioms.md  deep_cpp.md  design_pattern.md  essential_cpp.md  essential_intro.html  essential_intro.md  sample_code.md  solid.md  stdlib_and_concepts.md
plant_uml/: class_c.pu  class_layout.pu  di.pu  diamond_inheritance.pu  diamond_inheritance_obj.pu  diamond_inheritance_virtual_obj.pu  dip_ng.pu  dip_ng_seq.pu  dip_ok.pu  isp_ng.pu  isp_ok.pu  mutex_deadlock.pu  mvc.pu  observer_class_ng.pu  observer_class_ok.pu  observer_file_ng.pu  observer_file_ok.pu  ocp_ng.pu  ocp_ok.pu  pimpl_pattern.pu  proxy.pu  proxy_general.pu  rvalue.pu  rvalue_from_lvalue.pu  rvalue_from_move.pu  rvalue_from_rvalue.pu  shared_cyclic.pu  shared_cyclic_2.pu  shared_cyclic_3.pu  shared_each_1.pu  shared_each_2.pu  shared_each_3.pu  shared_each_4.pu  shared_ownership_1.pu  shared_ownership_2.pu  shared_ownership_3.pu  shared_ownership_4.pu  shared_ownership_5.pu  shared_ownership_6.pu  shared_ownership_7.pu  (+21 more)
tools/: git_ci_release.py  git_utils.py
(+140 files in other folders)
